# cja

./: .dockerignore  .gitignore  .release-please-manifest.json  CLAUDE.md  CLI_DEVELOPMENT_PLAN.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  fly.toml  release-please-config.json  rust-toolchain.toml  schema.sql
.claude/: settings.local.json
.github/workflows/: _pr-title.yml  _release.yml  check-rust.yml  ci.yml  format-rust.yml  sqlx-check.yml  update-rust.yml
.sqlx/: query-2c0ee5415d91e0e44ea46cb273e766f70c88aec08d929ab21036af6968cf3b1d.json  query-53f2ffd5dc85cc4daf46fdb6cb3c06edfa3e292873b25925db416043e503b467.json  query-5e37fe9dc583231a9be096235752f78dd7732c23d397965c06f6d5fffda76fde.json  query-62bc69fbc872b301481da4c824045ccbde095f9fb172664065d5c8fef227abb1.json  query-772725f13539ad3bf1e671e638e2c43f829e39aae02efa4ba9183e5a6f18e6cb.json  query-a51dd3189e2fd05a5e55124185798314eadaa1e63ad415c45d4e71aef100e646.json  query-b05d845863bcc06f9b9f261ae6a03571b19d7de06d7031326087aad25c81a6ee.json  query-b7223eeb7c1fe5c9f5c7e63d224a48f0d531232c4601604a20c5865d7a9a0cc1.json  query-df81cd71e2e1e39b8349d6adf55f92f4b17c431a01b27003dbd8b37232f7b470.json
crates/cja/: Cargo.toml  README.md  TESTING.md
crates/cja-macros/: Cargo.toml
crates/cja-macros/src/: lib.rs
crates/cja-passkey/: Cargo.toml  build.rs
crates/cja-passkey/frontend/: package.json  pnpm-lock.yaml  tsconfig.json
crates/cja-passkey/frontend/src/: passkey-client.ts
crates/cja-passkey/migrations/: 20260412000001_CreatePasskeyUsers.down.sql  20260412000001_CreatePasskeyUsers.up.sql  20260412000002_CreatePasskeyCredentials.down.sql  20260412000002_CreatePasskeyCredentials.up.sql  20260412000003_AddAuthColumnsToSessions.down.sql  20260412000003_AddAuthColumnsToSessions.up.sql
crates/cja-passkey/src/: config.rs  db.rs  extractors.rs  js.rs  lib.rs  session.rs
crates/cja-passkey/src/models/: credential.rs  user.rs
crates/cja-passkey/src/routes/: auth.rs  mod.rs  register.rs
crates/cja-passkey/tests/: integration.rs
crates/cja.app/: Cargo.toml
crates/cja.app/.sqlx/: query-64c33bef49b2d07b7aeefcb37d268148b8b0f6f20a254d9fe43503d41c947c77.json
crates/cja.app/assets/: docs-header.html  style.css
crates/cja.app/src/: main.rs  routes.rs  templates.rs
crates/cja/src/: app_state.rs  db.rs  eyes_manifest.rs  lib.rs  setup.rs  tasks.rs  testing.rs
crates/cja/src/cron/: mod.rs  registry.rs  worker.rs
crates/cja/src/db/: migrations.rs  mod.rs
crates/cja/src/jobs/: mod.rs  registry.rs  worker.rs
crates/cja/src/server/: mod.rs  page.rs  session.rs
crates/cja/src/server/cookies/: cookie_jar.rs  cookie_key.rs
crates/cja/src/server/page/: factory.rs
crates/cja/src/testing/: mod.rs
crates/cja/src/testing/mock_oauth/: mod.rs  routes.rs  state.rs  types.rs
crates/cja/tests/: mock_oauth_test.rs
crates/cja/tests/common/: app.rs  db.rs  mod.rs
crates/cja/tests/integration/: jobs.rs  mod.rs  sessions.rs
crates/cli/: CHANGELOG.md  Cargo.toml  DOCUMENTATION.md  EXAMPLES.md  README.md  build.rs
crates/cli/src/: main.rs
crates/cli/test-project-1/: Cargo.toml
crates/cli/test-project-1/migrations/: 20250413182934_AddSessions.down.sql
crates/cli/test-project-1/src/: main.rs
crates/cli/test-project-2/: Cargo.toml
crates/cli/test-project-2/migrations/: 20250413182934_AddSessions.up.sql
crates/cli/test-project-2/src/: main.rs
crates/cli/test-project-3/: Cargo.toml
crates/cli/test-project-3/src/: main.rs
crates/cli/test-project-4/: Cargo.toml
crates/cli/test-project-4/src/: main.rs
crates/cli/test-project-5/: Cargo.toml
crates/cli/test-project-5/src/: main.rs
crates/cli/test-project-6/: Cargo.toml
crates/cli/test-project-6/src/: main.rs
crates/cli/tests/: cli_tests.rs  init_command_tests.rs  init_mock_tests.rs  project_generation_tests.rs
crates/tracing-common/: Cargo.toml
crates/tracing-common/src/: lib.rs
docs/: architecture.md  conventions.md  development.md
migrations/: 20260206200552_AddDeadLetterJobs.sql  20260703120000_AddJobsPollIndex.sql
scripts/: install-cli-locally.sh  sqlx.sh
test-init-project/: Cargo.toml
