[package]
name = "cja-site"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
cja = { path = "../cja" }

axum.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sqlx.workspace = true
async-trait.workspace = true
maud.workspace = true

futures = "0.3.30"

[lints]
workspace = true
