[package]
name = "cja-site"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[features]
default = []
cron = ["cja/cron", "chrono-tz"]
jobs = ["cja/jobs", "serde", "serde_json"]

[dependencies]
cja = { path = "../cja", default-features = false }

axum.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
sqlx.workspace = true
async-trait.workspace = true
maud.workspace = true
tower-http = { version = "0.6.6", features = ["fs"] }

[dependencies.serde]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
optional = true

[dependencies.chrono-tz]
version = "0.10.0"
optional = true

[lints]
workspace = true
