[package]
name = "cja"
description = "Cron, Jobs and Axum a meta-framework for building web applications"
edition.workspace = true
authors.workspace = true

[features]
default = ["cron", "jobs"]
cron = ["jobs"]
jobs = []
testing = ["dep:sha2", "dep:hex", "dep:cja-macros"]

[dependencies]
async-trait.workspace = true
axum.workspace = true
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
sql-check.workspace = true
sql-check-macros.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
base64.workspace = true

thiserror = "1.0.56"
tower-cookies = { version = "0.11.0", features = ["signed", "private"] }
http = "1.0.0"
tower-http = { version = "0.6.6", features = ["trace"] }
tower-service = "0.3.2"
tower = "0.5.2"
socket2 = { version = "0.5.6", features = ["all"] }
listenfd = "1.0.2"
cron = "0.12.1"
chrono-tz = "0.10.0"

tracing-common = { path = "../tracing-common" }
color-eyre = "0.6.3"
maud.workspace = true
tokio-util.workspace = true

# Testing support (optional)
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
cja-macros = { path = "../cja-macros", optional = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["cookies"] }
once_cell = "1.19"

[lints]
workspace = true
