[package]
name = "cja"
description = "Cron, Jobs and Axum a meta-framework for building web applications"
edition.workspace = true
authors.workspace = true

[features]
default = ["cron", "jobs"]
cron = ["jobs"]
jobs = []
testing = ["serde_urlencoded"]

[dependencies]
async-trait.workspace = true
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
base64.workspace = true

futures = "0.3"
thiserror = "1.0.56"
tower-cookies = { version = "0.11.0", features = ["signed", "private"] }
http = "1.0.0"
tower-http = { version = "0.6.6", features = ["trace"] }
tower-service = "0.3.2"
tower = "0.5.2"
socket2 = { version = "0.5.6", features = ["all"] }
listenfd = "1.0.2"
cron = "0.12.1"
chrono-tz = "0.10.0"

color-eyre = "0.6.3"
eyes-subscriber = "0.1.4"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
sentry = { version = "0.31.5", default-features = false, features = [
  "rustls",
  "backtrace",
  "contexts",
  "panic",
  "tower",
  "reqwest",
] }
sentry-tracing = "0.31.8"
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
serde_urlencoded = { version = "0.7", optional = true }
maud.workspace = true
tokio-util.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["cookies"] }
once_cell = "1.19"

[lints]
workspace = true
