[package]
name = "cja-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command-line interface for scaffolding CJA projects"
keywords = ["cli", "web", "scaffold", "generator", "cja"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
readme = "README.md"
repository = "https://github.com/your-org/cja"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cja-cli"

[[bin]]
name = "cja"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"

[lints]
workspace = true
