[package]
name = "test-project-1"
version = "0.1.0"
edition = "2021"

[dependencies]
cja = { version = "0.0.0" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
maud = { version = "0.26", features = ["axum"] }
futures = "0.3"
async-trait = "0.1"
